--- a/www/styles.css
+++ b/www/styles.css
@@ -1,11 +1,9 @@
-.paperSection:before {
+.container:before {
     position: absolute;
     z-index: -1;
     background-color: #009688;
     width: 100%;
-    height: 170px;
+    height: 222px;
     content: '';
     top: 0;
-    left: 1px;
-    border: 1px solid #009688;
 }
