--- a/www/styles.css
+++ b/www/styles.css
@@ -80,6 +80,13 @@
     padding-left: 20px;
 }
 
+.dashboard{
+    position: relative;
+    left: -15px;
+    top: -15px;
+    margin: 30px;
+}
+
 .filters{
     clear: both;
     width: 100%;
@@ -145,4 +152,12 @@
 
 .login_avatar{
     background-color: rgb(255, 64, 129);
+}
+
+.widgets{
+  position: relative;
+  min-height: 1px;
+  float: left;
+  padding-right: 10px;
+  padding-left: 10px;
 }
