--- a/www/styles.css
+++ b/www/styles.css
@@ -25,6 +25,14 @@
     padding-bottom: 30px;
 }
 
+.mainPaperDashboardContainer{
+    width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
 .mainPaperContainer_login{
     width: 300px;
     margin-left: auto;
@@ -160,4 +168,22 @@
   float: left;
   padding-right: 10px;
   padding-left: 10px;
+}
+
+.startedTasksLineChartStyle{
+    position: relative;
+    margin-bottom: 50px;
+    padding-right: 40px;
+}
+
+.tasksStatusRadarChartStyle{
+    margin-bottom: 20px;
+    float: right;
+    margin-right: 40px;
+}
+
+.userTasksDoughnutChartStyle{
+    margin-bottom: 20px;
+    float: left;
+    margin-left: 50px;
 }
